--- a/src/backends/CMakeLists.txt
+++ b/src/backends/CMakeLists.txt
@@ -14,5 +14,4 @@ if(OPENMP)
     list(APPEND BACKENDS_OBJECTS $<TARGET_OBJECTS:backends_openmp>)
 endif()
 
-set(BACKENDS_OBJECTS
-    ${BACKENDS_OBJECTS} PARENT_SCOPE)
+set(BACKENDS_OBJECTS ${BACKENDS_OBJECTS} PARENT_SCOPE)
