--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,11 @@ set(STARSH_SRC)
 
 # Define the source files
 add_subdirectory("control")
+# Get code for applications
 add_subdirectory("applications")
+# Connection with other libraries (PLASMA)
+add_subdirectory("external")
+# Add some tools loke iterative solvers
 add_subdirectory("itersolvers")
 
 # Set backends and check if there is support for them
@@ -12,7 +16,11 @@ add_subdirectory("backends")
 add_library(starsh STATIC ${STARSH_SRC} ${BACKENDS_OBJECTS})
 if(OPENMP)
     target_link_libraries(starsh PRIVATE "${OpenMP_C_FLAGS}")
-endif()
+endif(OPENMP)
+if(STARPU)
+    target_link_libraries(starsh PRIVATE ${STARPU_LIBRARIES})
+    message("")
+endif(STARPU)
 
 # Install STARSH library
 install(TARGETS starsh
