--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -1,7 +1,6 @@
 # Defines the source files of the tests. Each file generates 1 test
 set(tests_files "symm_positivity_after_compression.c"
     "plasma/solve.c")
-include_directories(${CMAKE_SOURCE_DIR}/include)
 
 # Uses RUNPATH instead of RPATH
 SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
@@ -10,7 +9,5 @@ foreach(test_src ${tests_files})
     get_filename_component(test_exe ${test_src} NAME_WE)
     add_executable(${test_exe} ${test_src})
     target_link_libraries(${test_exe} starsh ${CBLAS_LIBRARIES}
-        ${LAPACKE_LIBRARIES} ${OpenMP_C_FLAGS})
-    #target_compile_options(${test_exe} PRIVATE "${OpenMP_C_FLAGS}")
-
+        ${LAPACKE_LIBRARIES} ${OpenMP_C_FLAGS} ${PLASMA_LIBRARIES})
 endforeach()
