Add multiple kernels for spatial statistics and add empty backends for mpi

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,9 @@ endif(OPENMP)
 if(STARPU)
     target_link_libraries(starsh PRIVATE ${STARPU_LIBRARIES})
 endif(STARPU)
+if(GSL_FOUND)
+    target_link_libraries(starsh PRIVATE ${GSL_LIBRARIES})
+endif(GSL_FOUND)
 
 # Install STARSH library
 install(TARGETS starsh
