Track of latest changes. Add MPI factorization, but it seems that Allgather is bugged in MPICH on my laptop (only root=0 process sends data)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,6 +121,7 @@ endif()
 if(MPI)
     find_package(MPI)
     if(MPI_C_FOUND)
+        include_directories(${MPI_C_INCLUDE_PATH})
         add_definitions("-DMPI")
     else()
         message("MPI is NOT found, skipping it")
