--- a/src/backends/CMakeLists.txt
+++ b/src/backends/CMakeLists.txt
@@ -17,7 +17,7 @@ endif()
 # Add MPI code
 if(MPI)
     add_subdirectory("mpi")
-    list(APPEND BACKENDS_OBJECYS $<TARGET_OBJECTS:backends_mpi>)
+    list(APPEND BACKENDS_OBJECTS $<TARGET_OBJECTS:backends_mpi>)
 endif()
 
 set(BACKENDS_OBJECTS ${BACKENDS_OBJECTS} PARENT_SCOPE)
