--- a/src/backends/mpi/blrm/CMakeLists.txt
+++ b/src/backends/mpi/blrm/CMakeLists.txt
@@ -2,7 +2,7 @@
 set(SRC
     #"${CMAKE_CURRENT_SOURCE_DIR}/dqp3.c"
     #"${CMAKE_CURRENT_SOURCE_DIR}/drsdd2.c"
-    #"${CMAKE_CURRENT_SOURCE_DIR}/drsdd.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/drsdd.c"
     #"${CMAKE_CURRENT_SOURCE_DIR}/dsdd.c"
     #"${CMAKE_CURRENT_SOURCE_DIR}/dmml.c"
     PARENT_SCOPE)
