Add function to measure relative error of approximation using mpi+omp backend, fix bug in mpi+omp approximation by drsdd.c

--- a/src/backends/mpi/CMakeLists.txt
+++ b/src/backends/mpi/CMakeLists.txt
@@ -1,3 +1,6 @@
 set(SRC)
 add_subdirectory("blrm")
 add_library(backends_mpi OBJECT ${SRC})
+if(OPENMP)
+    target_compile_options(backends_mpi PUBLIC "${OpenMP_C_FLAGS}")
+endif(OPENMP)
