--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,12 +115,13 @@ endif()
 
 # Check if PLASMA is available to build wrappers
 if(PLASMA)
-    pkg_search_module(PLASMA plasma)
+    pkg_search_module(PLASMA plasma>=3.0.0)
     if(PLASMA_FOUND)
         include_directories(${PLASMA_INCLUDE_DIRS})
         link_directories(${PLASMA_LIBRARY_DIRS})
         add_definitions("-DPLASMA")
         list(APPEND REQUIRES ${PLASMA_LIBRARIES})
+        message(STATUS "PLASMA ${PLASMA_VERSION} found")
     else()
         message("PLASMA is NOT found, skipping it")
         set(PLASMA OFF)
