--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Defines the source files of the tests. Each file generates 1 test
-set(tests_files "spatial.c" "rndtiled.c")
+set(tests_files "spatial.c" "rndtiled.c" "spatial1d.c")
 
 # Uses RUNPATH instead of RPATH
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
