All the changes from Shaheen, made for SC17

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -2,6 +2,8 @@
 set(tests_files "symm_positivity_after_compression.c"
     "mpi.c"
     "mpi3d.c"
+    "mpi_solve.c"
+    "mpi_nomatvec.c"
     )
 
 if( PLASMA_FOUND )
