--- a/src/applications/CMakeLists.txt
+++ b/src/applications/CMakeLists.txt
@@ -3,4 +3,5 @@ set(STARSH_SRC
     "${CMAKE_CURRENT_SOURCE_DIR}/common.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/spatial.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/rndtiled.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/minimal.c"
     ${STARSH_SRC} PARENT_SCOPE)
