--- a/src/backends/sequential/kernels/CMakeLists.txt
+++ b/src/backends/sequential/kernels/CMakeLists.txt
@@ -5,4 +5,5 @@ set(SRC
     "${CMAKE_CURRENT_SOURCE_DIR}/drsdd.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/dsdd.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/dsvfr.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/dna.c"
     ${SRC} PARENT_SCOPE)
