Removed many testing files, added spatial.c for shared memory and mpi_spatial.c for distributed memory spatial statistics; added minimal kernel (1 for offdiagonal and N+1 for diagonal elements) and fake approximation (which simply marks matrix as dense)

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -1,11 +1,8 @@
 # Defines the source files of the tests. Each file generates 1 test
 set(tests_files "symm_positivity_after_compression.c"
-    "mpi.c"
-    "mpi3d.c"
-    "mpi_solve.c"
-    "mpi3d_solve.c"
     "mpi_minimal.c"
-    "mpi_na.c"
+    "mpi_spatial.c"
+    "spatial.c"
     )
 
 if( PLASMA_FOUND )
