--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -1,14 +1,25 @@
 # Defines the source files of the tests. Each file generates 1 test
-set(tests_files
-    #"symm_positivity_after_compression.c"
-    "mpi_minimal.c"
-    "mpi_spatial.c"
+set(tests_files)
+
+# NEED TO PUT EXPLICIT DEPENDENCIES ON OTHER LIBRARIES HERE
+# However, it works for static library libstarsh.a and will NOT work for shared
+
+if(OPENMP)
+    list(APPEND tests_files
     "minimal.c"
     "spatial.c"
     "rndtiled.c"
     )
+endif()
 
-if( PLASMA_FOUND )
+if(MPI)
+    list(APPEND tests_files
+    "mpi_minimal.c"
+    "mpi_spatial.c"
+    )
+endif()
+
+if(PLASMA)
     list(APPEND tests_files "plasma/solve.c")
 endif()
 
@@ -17,9 +28,10 @@ SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
 
 foreach(test_src ${tests_files})
     get_filename_component(test_exe ${test_src} NAME_WE)
-    add_executable(${test_exe} ${test_src})
-    target_link_libraries(${test_exe} starsh ${CBLAS_LIBRARIES}
+    add_executable(test_${test_exe} ${test_src})
+    target_link_libraries(test_${test_exe} starsh ${CBLAS_LIBRARIES}
         ${LAPACKE_LIBRARIES} ${OpenMP_C_FLAGS})
+    set_target_properties(test_${test_exe} PROPERTIES OUTPUT_NAME ${test_exe})
 endforeach()
 
 add_test(NAME minimal_rsdd COMMAND minimal 2500 500 omp_rsdd 90 1e-9)
