--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,7 +25,7 @@ if(GSL_FOUND)
     target_link_libraries(starsh PRIVATE ${GSL_LIBRARIES})
 endif(GSL_FOUND)
 if(MPI)
-    set_target_properties(starsh PROPERTIES LINK_FLAGS ${MPI_C_LINK_FLAGS})
+    set_target_properties(starsh PROPERTIES LINK_FLAGS "${MPI_C_LINK_FLAGS}")
     target_link_libraries(starsh PRIVATE ${MPI_C_LIBRARIES})
 endif(MPI)
 if(PLASMA)
