--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,21 +15,21 @@ add_subdirectory("backends")
 
 add_library(starsh STATIC ${STARSH_SRC} ${BACKENDS_OBJECTS})
 if(OPENMP)
-    target_compile_options(starsh PRIVATE "${OpenMP_C_FLAGS}")
-    target_link_libraries(starsh PRIVATE "${OpenMP_C_FLAGS}")
+    target_compile_options(starsh PUBLIC "${OpenMP_C_FLAGS}")
+    target_link_libraries(starsh PUBLIC "${OpenMP_C_FLAGS}")
 endif(OPENMP)
 if(STARPU)
-    target_link_libraries(starsh PRIVATE ${STARPU_LIBRARIES})
+    target_link_libraries(starsh PUBLIC ${STARPU_LIBRARIES})
 endif(STARPU)
 if(GSL_FOUND)
-    target_link_libraries(starsh PRIVATE ${GSL_LIBRARIES})
+    target_link_libraries(starsh PUBLIC ${GSL_LIBRARIES})
 endif(GSL_FOUND)
 if(MPI)
     set_target_properties(starsh PROPERTIES LINK_FLAGS "${MPI_C_LINK_FLAGS}")
-    target_link_libraries(starsh PRIVATE ${MPI_C_LIBRARIES})
+    target_link_libraries(starsh PUBLIC ${MPI_C_LIBRARIES})
 endif(MPI)
 if(PLASMA)
-    target_link_libraries(starsh PRIVATE ${PLASMA_LIBRARIES})
+    target_link_libraries(starsh PUBLIC ${PLASMA_LIBRARIES})
 endif()
 
 # Install STARSH library
