Added tests for MPI

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -92,3 +92,67 @@ if(GSL_FOUND)
     add_test(NAME spatial_3d_matern2_qp3 COMMAND
         spatial 3 14 0.1 10 2744 686 omp_qp3 90 1e-9 1 0)
 endif()
+
+if(MPI)
+    add_test(NAME mpi_minimal_rsdd COMMAND ${MPIEXEC}
+        ./mpi_minimal 2500 500 mpi_rsdd 90 1e-9)
+    add_test(NAME mpi_minimal_sdd COMMAND ${MPIEXEC}
+        ./mpi_minimal 2500 500 mpi_sdd 90 1e-9)
+    add_test(NAME mpi_minimal_qp3 COMMAND ${MPIEXEC}
+        ./mpi_minimal 2500 500 mpi_qp3 90 1e-9)
+    add_test(NAME mpi_spatial_2d_exp_rsdd COMMAND ${MPIEXEC}
+        ./mpi_spatial 2 11 0.1 0.5 2500 500 mpi_rsdd 90 1e-9 1 0)
+    add_test(NAME mpi_spatial_2d_exp_sdd COMMAND ${MPIEXEC}
+        ./mpi_spatial 2 11 0.1 0.5 2500 500 mpi_sdd 90 1e-9 1 0)
+    add_test(NAME mpi_spatial_2d_exp_qp3 COMMAND ${MPIEXEC}
+        ./mpi_spatial 2 11 0.1 0.5 2500 500 mpi_qp3 90 1e-9 1 0)
+    add_test(NAME mpi_spatial_2d_sqrexp_rsdd COMMAND ${MPIEXEC}
+        ./mpi_spatial 2 12 0.1 0.5 2500 500 mpi_rsdd 90 1e-9 1 0)
+    add_test(NAME mpi_spatial_2d_sqrexp_sdd COMMAND ${MPIEXEC}
+        ./mpi_spatial 2 12 0.1 0.5 2500 500 mpi_sdd 90 1e-9 1 0)
+    add_test(NAME mpi_spatial_2d_sqrexp_qp3 COMMAND ${MPIEXEC}
+        ./mpi_spatial 2 12 0.1 0.5 2500 500 mpi_qp3 90 1e-9 1 0)
+
+    if(GSL_FOUND)
+        add_test(NAME mpi_spatial_2d_matern_rsdd COMMAND ${MPIEXEC}
+            ./mpi_spatial 2 13 0.1 10 2500 500 mpi_rsdd 90 1e-9 1 0)
+        add_test(NAME mpi_spatial_2d_matern_sdd COMMAND ${MPIEXEC}
+            ./mpi_spatial 2 13 0.1 10 2500 500 mpi_sdd 90 1e-9 1 0)
+        add_test(NAME mpi_spatial_2d_matern_qp3 COMMAND ${MPIEXEC}
+            ./mpi_spatial 2 13 0.1 10 2500 500 mpi_qp3 90 1e-9 1 0)
+        add_test(NAME mpi_spatial_2d_matern2_rsdd COMMAND ${MPIEXEC}
+            ./mpi_spatial 2 14 0.1 10 2500 500 mpi_rsdd 90 1e-9 1 0)
+        add_test(NAME mpi_spatial_2d_matern2_sdd COMMAND ${MPIEXEC}
+            ./mpi_spatial 2 14 0.1 10 2500 500 mpi_sdd 90 1e-9 1 0)
+        add_test(NAME mpi_spatial_2d_matern2_qp3 COMMAND ${MPIEXEC}
+            ./mpi_spatial 2 14 0.1 10 2500 500 mpi_qp3 90 1e-9 1 0)
+    endif()
+
+    add_test(NAME mpi_spatial_3d_exp_rsdd COMMAND ${MPIEXEC}
+        ./mpi_spatial 3 11 0.1 0.5 2744 686 mpi_rsdd 90 1e-9 1 0)
+    add_test(NAME mpi_spatial_3d_exp_sdd COMMAND ${MPIEXEC}
+        ./mpi_spatial 3 11 0.1 0.5 2744 686 mpi_sdd 90 1e-9 1 0)
+    add_test(NAME mpi_spatial_3d_exp_qp3 COMMAND ${MPIEXEC}
+        ./mpi_spatial 3 11 0.1 0.5 2744 686 mpi_qp3 90 1e-9 1 0)
+    add_test(NAME mpi_spatial_3d_sqrexp_rsdd COMMAND ${MPIEXEC}
+        ./mpi_spatial 3 12 0.1 0.5 2744 686 mpi_rsdd 90 1e-9 1 0)
+    add_test(NAME mpi_spatial_3d_sqrexp_sdd COMMAND ${MPIEXEC}
+        ./mpi_spatial 3 12 0.1 0.5 2744 686 mpi_sdd 90 1e-9 1 0)
+    add_test(NAME mpi_spatial_3d_sqrexp_qp3 COMMAND ${MPIEXEC}
+        ./mpi_spatial 3 12 0.1 0.5 2744 686 mpi_qp3 90 1e-9 1 0)
+
+    if(GSL_FOUND)
+        add_test(NAME mpi_spatial_3d_matern_rsdd COMMAND ${MPIEXEC}
+            ./mpi_spatial 3 13 0.1 10 2744 686 mpi_rsdd 90 1e-9 1 0)
+        add_test(NAME mpi_spatial_3d_matern_sdd COMMAND ${MPIEXEC}
+            ./mpi_spatial 3 13 0.1 10 2744 686 mpi_sdd 90 1e-9 1 0)
+        add_test(NAME mpi_spatial_3d_matern_qp3 COMMAND ${MPIEXEC}
+            ./mpi_spatial 3 13 0.1 10 2744 686 mpi_qp3 90 1e-9 1 0)
+        add_test(NAME mpi_spatial_3d_matern2_rsdd COMMAND ${MPIEXEC}
+            ./mpi_spatial 3 14 0.1 10 2744 686 mpi_rsdd 90 1e-9 1 0)
+        add_test(NAME mpi_spatial_3d_matern2_sdd COMMAND ${MPIEXEC}
+            ./mpi_spatial 3 14 0.1 10 2744 686 mpi_sdd 90 1e-9 1 0)
+        add_test(NAME mpi_spatial_3d_matern2_qp3 COMMAND ${MPIEXEC}
+            ./mpi_spatial 3 14 0.1 10 2744 686 mpi_qp3 90 1e-9 1 0)
+    endif()
+endif()
